--- a/index.html
+++ b/index.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic-Tac-Toe</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script defer src="js/main.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/main.css">
+  <script defer src="./js/app.js"></script>
+  <title>Tic-Tac-Toe</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Tic-Tac-Toe</h1>
-        <div class="game-board">
-            <div class="row">
-                <div class="cell" data-cell></div>
-                <div class="cell" data-cell></div>
-                <div class="cell" data-cell></div>
-            </div>
-            <div class="row">
-                <div class="cell" data-cell></div>
-                <div class="cell" data-cell></div>
-                <div class="cell" data-cell></div>
-            </div>
-            <div class="row">
-                <div class="cell" data-cell></div>
-                <div class="cell" data-cell></div>
-                <div class="cell" data-cell></div>
-            </div>
-        </div>
-        <p id="game-status"></p>
-        <a href="index.html" class="home-link">Back to Home</a>
-    </div>
+  <h1>Tic-Tac-Toe</h1>
+  <h2 id="message">Message</h2>
+
+  <section class="board">
+    <div class="sqr" id="0"></div>
+    <div class="sqr" id="1"></div>
+    <div class="sqr" id="2"></div>
+    <div class="sqr" id="3"></div>
+    <div class="sqr" id="4"></div>
+    <div class="sqr" id="5"></div>
+    <div class="sqr" id="6"></div>
+    <div class="sqr" id="7"></div>
+    <div class="sqr" id="8"></div>
+  </section>
+  <button id="reset">Reset</button>
 </body>
 </html>
