--- a/index.html
+++ b/index.html
@@ -21,19 +21,17 @@
       </div>
 
       <div id="game-board-wrapper">
-        <div id="board">
-          <section class="board">
-            <div class="sqr" id="0"></div>
-            <div class="sqr" id="1"></div>
-            <div class="sqr" id="2"></div>
-            <div class="sqr" id="3"></div>
-            <div class="sqr" id="4"></div>
-            <div class="sqr" id="5"></div>
-            <div class="sqr" id="6"></div>
-            <div class="sqr" id="7"></div>
-            <div class="sqr" id="8"></div>
-          </section>
-          </div>
+        <div id="squares-wrapper">
+          <div class="sqr" id="0"></div>
+          <div class="sqr" id="1"></div>
+          <div class="sqr" id="2"></div>
+          <div class="sqr" id="3"></div>
+          <div class="sqr" id="4"></div>
+          <div class="sqr" id="5"></div>
+          <div class="sqr" id="6"></div>
+          <div class="sqr" id="7"></div>
+          <div class="sqr" id="8"></div>
+        </div>
       </div>
 
       <div id="reset-button-container">
