fixed back to home link to match config in nginx.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   </div>
 
   <div id="back-to-home-container">
-    <button class="button" onclick="window.location.href='/landing/index.html'">
+    <button class="button" onclick="window.location.href='/'">
       Back to Home
     </button>
   </div>
